metodos de alteração, autenticação, pedido e usuário